force-app/main/default/objects/Stripe_Subscription_Item__c/Stripe_Subscription_Item__c.object-meta.xml
<CustomObject>

    <label>Stripe Subscription Item</label>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Subscription Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stripe Subscription Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject> 