force-app/main/default/objects/Stripe_Subscription_Item__c/fields/Stripe_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription__c</fullName>

    <description>Reference to the Stripe Subscription for this item</description>
    <label>Stripe Subscription</label>
    <referenceTo>Stripe_Subscription__c</referenceTo>
    <relationshipLabel>Subscription Items</relationshipLabel>
    <relationshipName>Subscription_Items</relationshipName>

    <type>MasterDetail</type>
</CustomField> 