force-app/main/default/objects/Stripe_Subscription_Item__c/fields/Stripe_Subscription_Item_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Item_ID__c</fullName>
    <description>External ID from Stripe for this subscription item</description>
    <externalId>true</externalId>
    <label>Stripe Subscription Item ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 